iaac/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: com-fe-gcom-operacional-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: com-fe-gcom-operacional
  template:
    metadata:
      labels:
        app.kubernetes.io/name: com-fe-gcom-operacional
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: com-fe-gcom-operacional
          image: registry.digitalocean.com/registry-kalfu-digital/com-fe-gcom-operacional
          imagePullPolicy: Always
